--- a/AnimeGallery/View/GalleryViewController.xib
+++ b/AnimeGallery/View/GalleryViewController.xib
@@ -39,39 +39,41 @@
                         <outlet property="delegate" destination="-1" id="8ii-1e-ZOF"/>
                     </connections>
                 </collectionView>
-                <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="default" rowHeight="44" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="qvA-xR-is0">
-                    <rect key="frame" x="0.0" y="66" width="375" height="88"/>
-                    <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                    <constraints>
-                        <constraint firstAttribute="height" constant="88" id="fin-Df-ZDs"/>
-                    </constraints>
-                    <connections>
-                        <outlet property="dataSource" destination="-1" id="caH-7a-OOx"/>
-                        <outlet property="delegate" destination="-1" id="G72-cZ-LpK"/>
-                    </connections>
-                </tableView>
-                <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="default" rowHeight="128" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="j7U-Yv-lVi">
-                    <rect key="frame" x="0.0" y="154" width="375" height="513"/>
-                    <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                    <connections>
-                        <outlet property="dataSource" destination="-1" id="ulc-Nr-SD2"/>
-                        <outlet property="delegate" destination="-1" id="2Jh-NT-XOE"/>
-                    </connections>
-                </tableView>
+                <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="i8R-pS-MGM">
+                    <rect key="frame" x="0.0" y="66" width="375" height="601"/>
+                    <subviews>
+                        <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" scrollEnabled="NO" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" style="plain" separatorStyle="default" rowHeight="44" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="qvA-xR-is0">
+                            <rect key="frame" x="0.0" y="0.0" width="375" height="88"/>
+                            <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                            <constraints>
+                                <constraint firstAttribute="height" constant="88" id="fin-Df-ZDs"/>
+                            </constraints>
+                            <connections>
+                                <outlet property="dataSource" destination="-1" id="caH-7a-OOx"/>
+                                <outlet property="delegate" destination="-1" id="G72-cZ-LpK"/>
+                            </connections>
+                        </tableView>
+                        <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="none" rowHeight="128" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="j7U-Yv-lVi">
+                            <rect key="frame" x="0.0" y="88" width="375" height="513"/>
+                            <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                            <connections>
+                                <outlet property="dataSource" destination="-1" id="ulc-Nr-SD2"/>
+                                <outlet property="delegate" destination="-1" id="2Jh-NT-XOE"/>
+                            </connections>
+                        </tableView>
+                    </subviews>
+                </stackView>
             </subviews>
             <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
             <color key="backgroundColor" systemColor="systemBackgroundColor"/>
             <constraints>
-                <constraint firstItem="qvA-xR-is0" firstAttribute="top" secondItem="tXx-uU-nst" secondAttribute="bottom" id="7cz-hX-aVo"/>
-                <constraint firstItem="j7U-Yv-lVi" firstAttribute="top" secondItem="qvA-xR-is0" secondAttribute="bottom" id="ArZ-gx-KiI"/>
                 <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="tXx-uU-nst" secondAttribute="trailing" id="Dup-Dx-V1s"/>
                 <constraint firstItem="tXx-uU-nst" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" id="G4Y-Yg-7yD"/>
                 <constraint firstItem="tXx-uU-nst" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" id="G7I-eE-LAT"/>
-                <constraint firstItem="j7U-Yv-lVi" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" id="PAe-7M-t7v"/>
-                <constraint firstItem="fnl-2z-Ty3" firstAttribute="bottom" secondItem="j7U-Yv-lVi" secondAttribute="bottom" id="UYW-Uf-wuV"/>
-                <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="qvA-xR-is0" secondAttribute="trailing" id="oaw-7S-m9U"/>
-                <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="j7U-Yv-lVi" secondAttribute="trailing" id="owb-yw-bYR"/>
-                <constraint firstItem="qvA-xR-is0" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" id="uYJ-Ns-lpl"/>
+                <constraint firstItem="i8R-pS-MGM" firstAttribute="top" secondItem="tXx-uU-nst" secondAttribute="bottom" id="Gpg-Ab-OPI"/>
+                <constraint firstItem="i8R-pS-MGM" firstAttribute="bottom" secondItem="fnl-2z-Ty3" secondAttribute="bottom" id="aLV-Fu-hNv"/>
+                <constraint firstItem="i8R-pS-MGM" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" id="cIF-oR-yA3"/>
+                <constraint firstItem="i8R-pS-MGM" firstAttribute="trailing" secondItem="fnl-2z-Ty3" secondAttribute="trailing" id="nte-uN-hWT"/>
             </constraints>
             <point key="canvasLocation" x="139" y="140"/>
         </view>
